--- a/notebooks/teamExample.ipynb
+++ b/notebooks/teamExample.ipynb
@@ -84,7 +84,7 @@
     "variant = 'NC_000019.10:g.44908822C>T'\n",
     "\n",
     "ref_id, info = variant.split(\":\")\n",
-    "print('First the {comp_id} into a VRS computed identifier, Then use {body} to fill out the rest of the class object allele!'.format(comp_id = ref_id,body = info))"
+    "print('First convert the {comp_id} into a VRS computed identifier, Then use {body} to fill out the rest of the class object allele!'.format(comp_id = ref_id,body = info))"
    ]
   },
   {
@@ -104,13 +104,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CURIE id: ['ga4gh:SQ.IIB53T8CNeJJdUqzn9V_JnRtQadwWCbl']\n"
+      "In order to use the computed identifier mechanism in VR, the sequence_id MUST use GA4GH computed sequence identifiers.\n",
+      "sequence_id as a CURIE: ['ga4gh:SQ.IIB53T8CNeJJdUqzn9V_JnRtQadwWCbl']\n"
      ]
     }
    ],
    "source": [
+    "print(\"In order to use the computed identifier mechanism in VR, the sequence_id MUST use GA4GH computed sequence identifiers.\")\n",
+    "\n",
     "comp_id = dp.translate_sequence_identifier(ref_id, \"ga4gh\")\n",
-    "print(\"CURIE id: {value}\".format(value= comp_id))"
+    "print(\"sequence_id as a CURIE: {value}\".format(value= comp_id))"
    ]
   },
   {
@@ -327,6 +330,98 @@
    "source": [
     "#Testing if they are both the same objects\n",
     "print(myallele == a1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'type': 'Allele', 'location': {'type': 'SequenceLocation', 'sequence_id': 'ga4gh:SQ.IIB53T8CNeJJdUqzn9V_JnRtQadwWCbl', 'interval': {'type': 'SequenceInterval', 'start': {'type': 'Number', 'value': 44908821}, 'end': {'type': 'Number', 'value': 44908822}}}, 'state': {'type': 'LiteralSequenceExpression', 'sequence': 'T'}}\n",
+      "\n",
+      "\n",
+      "{'type': 'Allele', 'location': {'type': 'SequenceLocation', 'sequence_id': 'ga4gh:SQ.IIB53T8CNeJJdUqzn9V_JnRtQadwWCbl', 'interval': {'type': 'SequenceInterval', 'start': {'type': 'Number', 'value': 44908821}, 'end': {'type': 'Number', 'value': 44908822}}}, 'state': {'type': 'LiteralSequenceExpression', 'sequence': 'T'}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(myallele.as_dict(), \"\\n\" ,a1.as_dict(), sep = '\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Step 6: Using build in function (ga4gh_identify()) to generates a CURIE identifier for a GA4GH object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using ga4gh_identify is an all in one function that can be used in order to obtain VRS identifiers\n",
+      "\n",
+      "\n",
+      "a1 example: ga4gh:VA.CxiA_hvYbkD8Vqwjhx5AYuyul4mtlkpD\n",
+      "myallele example: ga4gh:VA.CxiA_hvYbkD8Vqwjhx5AYuyul4mtlkpD\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Using ga4gh_identify() to generates a CURIE identifier for a GA4GH object')\n",
+    "print('\\n')\n",
+    "\n",
+    "print(\"a1 example: {}\".format(ga4gh_identify(a1)))\n",
+    "print(\"myallele example: {}\".format(ga4gh_identify(myallele)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Digest serialization converts a VRS object into a binary representation in preparation for computing a digest of the object\n",
+      "b'{\"location\":\"QrRSuBj-VScAGV_gEdxNgsnh41jYH1Kg\",\"state\":{\"sequence\":\"T\",\"type\":\"LiteralSequenceExpression\"},\"type\":\"Allele\"}'\n",
+      "\n",
+      "\n",
+      "sha512t24u truncated digest algorithm computes an ASCII digest from binary data\n",
+      "CxiA_hvYbkD8Vqwjhx5AYuyul4mtlkpD\n",
+      "\n",
+      "\n",
+      "Creating a CURIE identifier for a GA4GH object\n",
+      "prefix : type_prefix . <digest>\n",
+      "ga4gh:VA.CxiA_hvYbkD8Vqwjhx5AYuyul4mtlkpD\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Digest serialization converts a VRS object into a binary representation in preparation for computing a digest of the object\")\n",
+    "print(ga4gh_serialize(a1))\n",
+    "\n",
+    "print('\\n')\n",
+    "\n",
+    "print(\"sha512t24u truncated digest algorithm computes an ASCII digest from binary data\")\n",
+    "print(sha512t24u(ga4gh_serialize(a1)))\n",
+    "\n",
+    "print('\\n')\n",
+    "\n",
+    "print(\"Creating a CURIE identifier for a GA4GH object\")\n",
+    "print(\"prefix : type_prefix . <digest>\")\n",
+    "print(\"ga4gh:VA.{}\".format(sha512t24u(ga4gh_serialize(a1))))\n",
+    "\n"
    ]
   }
  ],
