Extra Group examples

--- a/notebooks/teamExample.ipynb
+++ b/notebooks/teamExample.ipynb
@@ -199,7 +199,8 @@
    "source": [
     "mylocation =  models.SequenceLocation( \n",
     "        sequence_id = 'ga4gh:SQ.IIB53T8CNeJJdUqzn9V_JnRtQadwWCbl',\n",
-    "        interval = myinterval)\n",
+    "        interval = myinterval,\n",
+    "        type = \"SequenceLocation\")\n",
     "print(ppo(mylocation))"
    ]
   },
