--- a/notebooks/rb_lab_extras/MoreExampleNotebooks/BreakDown of VRS-Allele.ipynb
+++ b/notebooks/rb_lab_extras/MoreExampleNotebooks/BreakDown of VRS-Allele.ipynb
@@ -425,7 +425,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "vrsproject",
    "language": "python",
    "name": "python3"
   },
@@ -439,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.0 (default, Nov 15 2020, 14:28:56) \n[GCC 7.3.0]"
   },
   "toc": {
    "base_numbering": 1,
@@ -456,7 +456,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "ef3fda8021ed6ddb2e03d54c76fcd0ea63d7a9b4b6698faed9d9d4d95a801b2a"
+    "hash": "56f07a5380f7b0d56c2c6b05df547d12669f1587ac652dca84424c7aa32eca36"
    }
   }
  },
