--- a/notebooks/rb_lab_extras/MoreExampleNotebooks/HGVS to VRS-Allele Object Tutorial.ipynb
+++ b/notebooks/rb_lab_extras/MoreExampleNotebooks/HGVS to VRS-Allele Object Tutorial.ipynb
@@ -10,19 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "6d7779fe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/M278428/opt/anaconda3/envs/test_dev_vrs_installation/lib/python3.9/site-packages/python_jsonschema_objects/__init__.py:49: UserWarning: Schema version http://json-schema.org/draft-07/schema not recognized. Some keywords and features may not be supported.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ga4gh.core import sha512t24u\n",
     "from ga4gh.core import ga4gh_digest, ga4gh_identify, ga4gh_serialize\n",
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "c5844776",
    "metadata": {},
    "outputs": [],
@@ -49,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "2021038d",
    "metadata": {},
    "outputs": [],
@@ -61,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "a93ed3a9",
    "metadata": {},
    "outputs": [],
@@ -75,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "d6c0b98e",
    "metadata": {},
    "outputs": [],
@@ -83,14 +74,21 @@
     "# list of hgvs expressions\n",
     "hgvs_exprs = [\n",
     "    \"NC_000013.11:g.32936732C=\",\n",
-    "    \"NC_000007.14:g.55181320A>T\",\n",
+    "    #\"NC_000007.14:g.55181320A>T\",\n",
+    "    \"NC_000007.14\",\n",
     "    \"NC_000007.14:g.55181220del\",\n",
-    "    \"NC_000007.14:g.55181230_55181231insGGCT\"]"
+    "    \"NC_000007.14:g.55181230_55181231insGGCT\"]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# \"NC_000013 . 11 : g . 32936732 C = \""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "856cf1e7",
    "metadata": {},
    "outputs": [
@@ -121,29 +119,7 @@
       "  },\n",
       "  \"type\": \"Allele\"\n",
       "}\n",
-      "ga4gh:VA.5Z7gWQGUuGAPe4Pw2_kJvnkhS2Q5jRhY\n",
-      "{\n",
-      "  \"location\": {\n",
-      "    \"interval\": {\n",
-      "      \"end\": {\n",
-      "        \"type\": \"Number\",\n",
-      "        \"value\": 55181320\n",
-      "      },\n",
-      "      \"start\": {\n",
-      "        \"type\": \"Number\",\n",
-      "        \"value\": 55181319\n",
-      "      },\n",
-      "      \"type\": \"SequenceInterval\"\n",
-      "    },\n",
-      "    \"sequence_id\": \"ga4gh:SQ.F-LrLMe1SRpfUZHkQmvkVKFEGaoDeHul\",\n",
-      "    \"type\": \"SequenceLocation\"\n",
-      "  },\n",
-      "  \"state\": {\n",
-      "    \"sequence\": \"T\",\n",
-      "    \"type\": \"LiteralSequenceExpression\"\n",
-      "  },\n",
-      "  \"type\": \"Allele\"\n",
-      "}\n",
+      "ERROR in the syntext NC_000007.14\n",
       "ga4gh:VA.h6WuolTwZJYZh86qP2a8YVA1WXpHuY_X\n",
       "{\n",
       "  \"location\": {\n",
@@ -195,15 +171,39 @@
    ],
    "source": [
     "for expr in hgvs_exprs:\n",
-    "    trans = tlr.translate_from(expr)\n",
-    "    vrs_id = ga4gh_identify(trans)\n",
-    "    print(vrs_id, pjson(trans), sep = '\\n')\n"
+    "    try:\n",
+    "        trans = tlr.translate_from(expr)\n",
+    "        vrs_id = ga4gh_identify(trans)\n",
+    "        print(vrs_id, pjson(trans), sep = '\\n')\n",
+    "    except:\n",
+    "        print('{0} {1}'.format('ERROR in the syntext',expr,))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "debd7794",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hgvs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24427e81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "vrsproject",
    "language": "python",
    "name": "python3"
   },
@@ -217,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.0"
   },
   "toc": {
    "base_numbering": 1,
@@ -231,6 +231,11 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "56f07a5380f7b0d56c2c6b05df547d12669f1587ac652dca84424c7aa32eca36"
+   }
   }
  },
  "nbformat": 4,
