--- a/notebooks/rb_lab_extras/MoreExampleNotebooks/SPDI to VRS-Allele Object Tutorial.ipynb
+++ b/notebooks/rb_lab_extras/MoreExampleNotebooks/SPDI to VRS-Allele Object Tutorial.ipynb
@@ -203,7 +203,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "vrsproject",
    "language": "python",
    "name": "python3"
   },
@@ -217,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.0 (default, Nov 15 2020, 14:28:56) \n[GCC 7.3.0]"
   },
   "toc": {
    "base_numbering": 1,
@@ -231,6 +231,11 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "56f07a5380f7b0d56c2c6b05df547d12669f1587ac652dca84424c7aa32eca36"
+   }
   }
  },
  "nbformat": 4,
